[package]
name = "duratii"
version = "0.1.0"
edition = "2021"
authors = ["Epiphytic"]
description = "A lightweight orchestrator for managing multiple Claude Code instances"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3"
js-sys = "0.3"
urlencoding = "2.1"

[profile.release]
opt-level = "s"
lto = true
